# twilight

./: .gitmodules  Cargo.toml
.github/workflows/: rust_ci.yml
firmware/: Cargo.toml  LICENSE-MIT
firmware/.cargo/: config.toml
firmware/src/: ble.rs  serial.rs
src/: ble.rs  charactaristic.rs  main.rs  serial.rs
