[package]
name = "twilight"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

[dependencies]
bleps = { path = "./third_party/bleps/bleps", features = ["async", "macros"] }
de1 = { path = "./third_party/de1" }
embassy-executor = { version = "0.5.0", features = [
	"nightly",
	"integrated-timers",
	"arch-riscv32",
] }
embassy-futures = "0.1.1"
embassy-net = { version = "0.4.0", features = [
	"tcp",
	"udp",
	"dhcpv4",
	"medium-ethernet",
] }
embassy-sync = "0.5.0"
embassy-time = "0.3.0"
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
esp-alloc = "0.3.0"
esp-backtrace = { version = "0.11.0", features = [
	"esp32c3",
	"panic-handler",
	"exception-handler",
	"println",
] }
esp-println = { version = "0.9.1", default-features = false, features = [
	"esp32c3",
	"jtag-serial",
] }
esp-wifi = { version = "0.3.0", features = ["esp32c3", "wifi", "ble", "async"] }
esp32c3-hal = { version = "0.15.0", features = [
	"embassy",
	"async",
	"embassy-time-timg0",
	"embassy-executor-thread",


] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
	"medium-ethernet",
	"proto-igmp",
	"proto-ipv4",
	"socket-tcp",
	"socket-icmp",
	"socket-udp",
	"medium-ethernet",
	"proto-dhcpv4",
	"socket-raw",
	"socket-dhcpv4",
] }
